Try for README.org

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-/target
-/lib
-/classes
 /checkouts
-pom.xml
-*~
-*.jar
+/classes
+/lib
+/target
 *.class
+*.gem
+*.gemspec
+*.jar
+*~
 .lein-deps-sum
 .lein-failures
 .lein-plugins
+pom.xml
